# satellitehub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: consulting-template.ipynb  quick-start.ipynb
scripts/: run_analysis.py
src/satellitehub/: __about__.py  __init__.py  _pipeline.py  _types.py  api.py  cache.py  config.py  exceptions.py  location.py  results.py
src/satellitehub/analysis/: __init__.py  vegetation.py  weather.py
src/satellitehub/providers/: __init__.py  base.py  cds.py  cdse.py  imgw.py  landsat.py
tests/: conftest.py  test_cache.py  test_config.py  test_exceptions.py  test_import.py  test_location.py  test_method_discovery.py  test_pipeline.py  test_result_exports.py  test_results.py  test_types.py  test_weather_result.py  test_weather_semantic.py
tests/analysis/: test_vegetation.py
tests/providers/: test_base.py  test_cds.py  test_cdse.py  test_imgw.py  test_landsat.py  test_registry.py
