[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satellitehub"
dynamic = ["version"]
description = "Unified Python SDK for satellite data access and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Kacper Konopka", email = "kacper.konopka9@gmail.com" },
]
keywords = ["satellite", "sentinel-2", "landsat", "ndvi", "geospatial", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.2.0,<3.0",
    "pandas>=2.0.0,<3.0",
    "requests>=2.31.0,<3.0",
    "shapely>=2.0.0,<3.0",
    "pydantic>=2.6.0,<3.0",
    "rasterio>=1.3.0,<2.0",
    "matplotlib>=3.8.0,<4.0",
    "xarray>=2024.1.0",
    "netCDF4>=1.6.0",
    "h5netcdf>=1.3.0",
    "h5py>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/kacperkonopka/satellitehub"
Repository = "https://github.com/kacperkonopka/satellitehub"
Issues = "https://github.com/kacperkonopka/satellitehub/issues"

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "mypy>=1.10.0", "types-requests>=2.31.0"]
test = ["pytest>=8.0.0", "vcrpy>=6.0.0", "pytest-cov>=5.0.0"]
all = ["satellitehub[dev]", "satellitehub[test]"]

[tool.hatch.version]
path = "src/satellitehub/__about__.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "N", "S", "B", "A", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "D102", "D103", "SIM117"]
"src/satellitehub/providers/cdse.py" = ["S105"]  # _TOKEN_URL triggers false positive
"scripts/**" = ["E501"]  # HTML template strings have long lines

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "rasterio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["xarray.*", "netCDF4.*", "h5netcdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Tests hitting live APIs (manual only)",
    "reproducibility: Golden-file determinism assertions",
]
